Fix on DragWithMaskedWindows

The current combination of WindowTargeter with MaskedWindowDelegate
isn't working well with Mash. Instead of doing this, it needs to
use window targeter's new API for setting window masks.

The GetEventHandlerForPoint should be fixed in a way to follow
this new way.

BUG=901546
TEST=the new test case also covers

Change-Id: I0b095777450fab3fa28ff9ebd8473667f644ab9e
Reviewed-on: https://chromium-review.googlesource.com/c/1320689
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605853}
Former-commit-id: a6966377234dde60fdf90502ffbe29770d604c4f